--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-ca">
   <head>
     <title>https://kyxie.github.io/en/</title>
-    <link rel="canonical" href="https://kyxie.github.io/en/">
+    <link rel="canonical" href="https://yiminchen1999.github.io/Melody-Chen.github.io/en/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://kyxie.github.io/en/">
+    <meta http-equiv="refresh" content="0; url=https://yiminchen1999.github.io/Melody-Chen.github.io/en/">
   </head>
 </html>
